tests/functional/lang/eval-fail-toJSON-outPath-through-toString.err.exp
error:
       … while calling the 'toJSON' builtin
         at /pwd/lang/eval-fail-toJSON-outPath-through-toString.nix:4:1:
            3| # fails, even though the outer `outPath` traversal itself succeeded.
            4| builtins.toJSON {
             | ^
            5|   outPath = {

       … while evaluating the result of the `__toString` attribute
         at /pwd/lang/eval-fail-toJSON-outPath-through-toString.nix:5:3:
            4| builtins.toJSON {
            5|   outPath = {
             |   ^
            6|     __toString = self: 42;

       error: cannot coerce an integer to a string: 42
